Fix 'Crash on export'.

On destructing class UMLApp an already destroyed undo stack is
referenced. The fix is to guard access to undo stack with
m_pUndoStack != 0.

BUG:360172
FIXED-IN:2.18.3 (KDE Applications 2.18.3)